# Folder-Sync-and-Protect-from-Virus

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/: syncFolders.py
test/: unitTest.py
